<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yellow"
    android:gravity="bottom"
    tools:context=".MainActivity">



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="50dp"
        android:text="Unit Converting"


        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:textSize="30dp"
        android:text="@string/enter"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="ENTER VALUE"

        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="44dp" />



    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/kilo"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="111dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/cent"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="111dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/milli"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="182dp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/me"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="182dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/result"
        android:textStyle="bold"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="317dp" />
    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/output"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="303dp" />


    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
        android:text="@string/k"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="390dp" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/met"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="390dp" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/mill"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="469dp" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/centi"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="276dp"
        tools:layout_editor_absoluteY="469dp" />
    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="59dp"
        android:text="@string/submit"
        android:textStyle="bold"

        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="560dp" />
</TableLayout>